@@ -1,3 +1,9 @@
+2007-08-31  Tristan Gingold  <gingold@adacore.com>
+
+	* ld-script/map-address.t: Add a test for testing DEFINED in map
+	output.
+	* ld-script/map-address.d: Update expected output.
+
 2007-08-28  Mark Shinwell  <shinwell@codesourcery.com>
             Joseph Myers  <joseph@codesourcery.com>
 
